--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -133,10 +133,13 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="AssetBrowser.h" />
     <ClInclude Include="BrowserItem.h" />
+    <ClInclude Include="BrowserItemContextualMenu.h" />
     <ClInclude Include="Context.h" />
     <ClInclude Include="FileItem.h" />
+    <ClInclude Include="FileItemContextualMenu.h" />
     <ClInclude Include="FolderItem.h" />
     <ClInclude Include="Editor.h" />
+    <ClInclude Include="FolderItemContextualMenu.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="ISupportUndo.h" />
     <ClInclude Include="Link.h" />
@@ -152,10 +155,13 @@
     <ClCompile Include="appTest.cpp" />
     <ClCompile Include="AssetBrowser.cpp" />
     <ClCompile Include="BrowserItem.cpp" />
+    <ClCompile Include="BrowserItemContextualMenu.cpp" />
     <ClCompile Include="Context.cpp" />
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="FileItem.cpp" />
+    <ClCompile Include="FileItemContextualMenu.cpp" />
     <ClCompile Include="FolderItem.cpp" />
+    <ClCompile Include="FolderItemContextualMenu.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="ISupportUndo.cpp" />
     <ClCompile Include="Link.cpp" />
