--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -10,12 +10,12 @@ Collapsed=0
 
 [Window][##dockspace]
 Pos=0,0
-Size=1707,996
+Size=2560,1377
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=428,649
+Size=428,903
 Collapsed=0
 DockId=0x00000001,0
 
@@ -51,13 +51,13 @@ Collapsed=0
 
 [Window][Shader Editor##1]
 Pos=430,19
-Size=1277,649
+Size=2130,903
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Asset Browser##2]
-Pos=0,670
-Size=1707,326
+Pos=0,924
+Size=2560,453
 Collapsed=0
 DockId=0x00000005,0
 
@@ -67,7 +67,7 @@ Size=825,350
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y
+DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=2560,1358 Split=Y NoWindowMenuButton=1
   DockNode    ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,649 Split=X NoWindowMenuButton=1
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=428,977 NoWindowMenuButton=1 Selected=0xE927CF2F
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=2130,977 CentralNode=1 NoWindowMenuButton=1 Selected=0x47F63A4B
