--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -43,6 +43,12 @@
     <Filter Include="源文件\Asset\Loader">
       <UniqueIdentifier>{4260cf03-8f30-4d39-8ba2-ab99984c851f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\JobSystem">
+      <UniqueIdentifier>{3585208b-0675-4f5d-888a-e2ffd273e1d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\JobSystem">
+      <UniqueIdentifier>{38d8ad3e-4354-41c5-9145-e935bff2dc03}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ServiceLocator.h">
