--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -134,10 +134,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Actor.h" />
     <ClInclude Include="Archetype.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="IAsset.h" />
     <ClInclude Include="IAssetManger.h" />
+    <ClInclude Include="IComponent.h" />
     <ClInclude Include="Metatype.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="TaskProxy.h" />
@@ -148,6 +150,7 @@
     <ClInclude Include="ThreadPool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Actor.cpp" />
     <ClCompile Include="Archetype.cpp" />
     <ClCompile Include="CoreTest.cpp" />
     <ClCompile Include="Entity.cpp" />
