--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -52,6 +52,12 @@
     <Filter Include="源文件\TaskSystem">
       <UniqueIdentifier>{6a19ae51-38b1-4393-b2c4-9a821977dcf4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\ECS\Components">
+      <UniqueIdentifier>{e080df25-55cd-458f-9078-754cdc08f51a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\ECS\Components">
+      <UniqueIdentifier>{4fb906b8-4d4b-4225-909d-ccf86dbe01a2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ServiceLocator.h">
@@ -90,6 +96,12 @@
     <ClInclude Include="TaskProxy.h">
       <Filter>头文件\TaskSystem</Filter>
     </ClInclude>
+    <ClInclude Include="Actor.h">
+      <Filter>头文件\ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="IComponent.h">
+      <Filter>头文件\ECS\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextureManger.cpp">
@@ -115,6 +127,9 @@
     </ClCompile>
     <ClCompile Include="TaskProxy.cpp">
       <Filter>源文件\TaskSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Actor.cpp">
+      <Filter>源文件\ECS</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
