--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -136,10 +136,12 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Archetype.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="IAsset.h" />
     <ClInclude Include="IAssetManger.h" />
     <ClInclude Include="IComponent.h" />
+    <ClInclude Include="IInspectorItem.h" />
     <ClInclude Include="Metatype.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="TaskProxy.h" />
@@ -148,10 +150,12 @@
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="TextureManger.h" />
     <ClInclude Include="ThreadPool.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="Archetype.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CoreTest.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="TaskProxy.cpp" />
@@ -159,6 +163,7 @@
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="TextureManger.cpp" />
     <ClCompile Include="ThreadPool.cpp" />
+    <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Entity.inl" />
