--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -143,6 +143,8 @@
     <ClInclude Include="IComponent.h" />
     <ClInclude Include="IInspectorItem.h" />
     <ClInclude Include="Metatype.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneManger.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="TaskProxy.h" />
     <ClInclude Include="TaskSystem.h" />
@@ -158,6 +160,8 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CoreTest.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneManger.cpp" />
     <ClCompile Include="TaskProxy.cpp" />
     <ClCompile Include="TaskSystem.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
