Serialize & Deserialize Scene

--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -106,7 +106,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>..\ThirdParty\include;..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -136,8 +136,8 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Archetype.h" />
-    <ClInclude Include="Camera.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="FooComponent.h" />
     <ClInclude Include="IAsset.h" />
     <ClInclude Include="IAssetManger.h" />
     <ClInclude Include="IComponent.h" />
@@ -157,19 +157,25 @@
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="Archetype.cpp" />
-    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CoreTest.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManger.cpp" />
     <ClCompile Include="TaskProxy.cpp" />
     <ClCompile Include="TaskSystem.cpp" />
+    <None Include="TestRapidjson.json">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="TestScenejson.json">
+      <FileType>Document</FileType>
+    </None>
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="TextureManger.cpp" />
     <ClCompile Include="ThreadPool.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Actor.inl" />
     <None Include="Entity.inl" />
     <None Include="IAssetManger.inl" />
     <None Include="Metatype.inl" />
